# mock-data-generator

./: PHASE_3_IMPLEMENTATION_STATUS.md  REFACTOR_IMPLEMENTATION_PLAN.md  google_ads_ad_group_ads.py  main.py  pyproject.toml
crm/pipedrive/: activities_generator.py  deals_generator.py  generate_pipedrive_entities.py  leads_generator.py  organizations_generator.py  persons_generator.py
customer_lead_sources/: generate_bookyourdata_leads.py  generate_uplead_leads.py  unified_leads_enriched.parquet
digital_analytics/: shared_config.py
digital_analytics/amplitude/: README.md  active_new_users_generator.py  amplitude_events_gcs_pipeline.py  customer_acquisition_analysis.py  event_stream_generator.py  event_taxonomy.py  funnel_report_generator.py  generate_stripe_pipedrive_from_amplitude.py  main.py  retention_cohorts_generator.py  revenue_ltv_report_generator.py  shared_config.py
digital_analytics/google_analytics/: conversions_report_generator.py  events_report_generator.py  traffic_acquisition_generator.py  user_acquisition_generator.py
paid_ad_sources/: google_ads_ad_group_criterion.py  google_ads_ad_groups.py  google_ads_campaign_criterion.py  google_ads_campaigns.py  google_ads_click_view.py  google_ads_customers.py
paid_ad_sources/facebook_ads/: ad_account_generator.py  ad_creatives_generator.py  ad_sets_generator.py  ads_generator.py  ads_insights_generator.py  campaigns_generator.py  custom_conversions_generator.py
paid_ad_sources/google_ads/: google_ads_ad_group_ads.py  (+6 more)
transforms/: crm_source.py  entity_models.py  ga4_source.py  stripe_source.py
(+11 files in other folders)
